Bug 266760 - The autostart kcm doesn't show the correct name immediately after "adding program"
Summary: The autostart kcm doesn't show the correct name immediately after "adding pro...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_autostart (other bugs)
Version First Reported In: 4.9.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-20 22:15 UTC by SlashDevDsp
Modified: 2015-03-07 14:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: Plasma-5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description SlashDevDsp 2011-02-20 22:15:07 UTC
Version:           1.0 (using KDE 4.6.0) 
OS:                Linux

the command entry for autostart does not show correct name/value

Reproducible: Always

Steps to Reproduce:
1. systemsettings->startup and shutdown. in the autostart section click the "add program"
2. example: type 'akonadictl' without quotes and click 'OK'
3. Now in the new properties window select the 'Application' TAB and change the text entry for 'command:' to 'akonadictl stop' (without quotes)
4. click 'OK' and find the entry in the listing. it lists the 'Name:' akonadictl and 'Command:' 'akonadictl' without the argument 'stop' (BUG) 
5. Now if you happen to add another example (dummy) entry to autostart and look for the previous example entry 'akonadictl' you will find that it shows 'command:' correctly (akonadictl stop) but the 'Name:' entry is blank.
http://img148.imageshack.us/img148/6585/snapshot1sv.png


Expected Results:  
The display entries should be updated correctly

OS: Linux (x86_64) release 2.6.37-020637-generic
Compiler: cc
Comment 1 Jekyll Wu 2012-11-09 06:10:19 UTC
Still reproduciable using KDE SC 4.9.3.  The file written into disk is correct, so a UI bug.
Comment 2 Laurent Montel 2015-03-07 14:21:00 UTC
Git commit ecbefe504d792aa5700451e8987ec05fdae2bf1d by Montel Laurent.
Committed on 07/03/2015 at 14:20.
Pushed by mlaurent into branch 'Plasma/5.2'.

Fix Bug 266760 - The autostart kcm doesn't show the correct name immediately after "adding program"

FIXED-IN: Plasma-5.2.1

M  +2    -1    kcms/autostart/autostart.cpp

http://commits.kde.org/plasma-desktop/ecbefe504d792aa5700451e8987ec05fdae2bf1d
Comment 3 Laurent Montel 2015-03-07 14:21:35 UTC
Git commit f687e464e419d50ef6bfd799183edefb94caf639 by Montel Laurent.
Committed on 07/03/2015 at 14:20.
Pushed by mlaurent into branch 'master'.

Fix Bug 266760 - The autostart kcm doesn't show the correct name immediately after "adding program"

FIXED-IN: Plasma-5.2.1

M  +2    -1    kcms/autostart/autostart.cpp

http://commits.kde.org/plasma-desktop/f687e464e419d50ef6bfd799183edefb94caf639