Fix Bug 266760 - The autostart kcm doesn't show the correct name immediately after "adding program"

FIXED-IN: Plasma-5.2.1
BUG: 266760